--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <body>
         <header>
             <div>
-                <img class="logo" src="logo.jpeg">
+                <img class="logo" src="img/logo.jpeg">
                 <nav>
                     <ul>
                         <li><a href="index.html">Inicio</a></li>
@@ -38,7 +38,7 @@
 
     <footer>
         <hr class="rounded">
-        <img class="baixo" src="logo.jpeg">
+        <img class="baixo" src="img/logo.jpeg">
         <p class="rodape">Instagram: biquinismari_</p>
         <a class="whatsapp-link" href="https://web.whatsapp.com/send?phone=5598981346525" target="_blank">
             <i class="fa fa-whatsapp"></i>
