--- a/produto.html
+++ b/produto.html
@@ -14,7 +14,7 @@
     <body>
         <header>
             <div>
-                <img class="logo" src="logo.jpeg">
+                <img class="logo" src="img/logo.jpeg">
                 <nav>
                     <ul>
                         <li><a href="index.html">Inicio</a></li>
@@ -30,19 +30,19 @@
             <ul class="biquinis">
                 <li>
                     <h2>Biquini Olho Negro</h2>
-                    <img class="imagem-biquinis" src="biquini_verde.jpeg" alt="biquini verde Olho Negro">
+                    <img class="imagem-biquinis" src="img/biquini_verde.jpeg" alt="biquini verde Olho Negro">
                     <p class="descricao-imagem"> Veste tamanho M/G  </p>
                     <p class="descricao-preco">R$ 64,90 reais</p>
                 </li>
                 <li>
                     <h2>Biquíni Kendal vermelho</h2>
-                    <img class="imagem-biquinis" src="biquini_vermelho2.jpeg" alt="biquini vermelho Kendal">
+                    <img class="imagem-biquinis" src="img/biquini_vermelho2.jpeg" alt="biquini vermelho Kendal">
                     <p class="descricao-imagem"> Veste Tamanho M</p>
                     <p class="descricao-preco">R$ 104,99 reais (2x sem juros)</p>
                 </li>
                 <li>
                     <h2>Biquini Hot pants verde</h2>
-                    <img class="imagem-biquinis" src="biquini_verde3.jpeg" alt="biquini verde Hot Pants">
+                    <img class="imagem-biquinis" src="img/biquini_verde3.jpeg" alt="biquini verde Hot Pants">
                     <p class="descricao-imagem"> Veste Tamanho M</p>
                     <p class="descricao-preco">R$ 64,90 reais</p>
                 </li>
@@ -52,7 +52,7 @@
 
      <footer>
         <hr class="rounded">
-        <img class="baixo" src="logo.jpeg">
+        <img class="baixo" src="img/logo.jpeg">
         <p class="rodape">Instagram: biquinismari_</p>
         <a class="whatsapp-link" href="https://web.whatsapp.com/send?phone=5598981346525" target="_blank">
             <i class="fa fa-whatsapp"></i>
