--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
         <link rel="stylesheet" href="reset.css">
         <link rel="stylesheet" href="estilo.css">
-        <link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville&family=Ubuntu+Mono&display=swap" rel="stylesheet">
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Libre+Baskerville&family=Pacifico&display=swap" >
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
     </head>
 
